--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-vision-camera": "^4.7.3",
     "react-native-web": "~0.21.0",
+    "react-native-wifi-reborn": "^4.13.6",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
